# Python-Pinyin-Kana

./: .gitignore  README-zh.md  README.md  pyproject.toml
pinyin_kana/: __init__.py  pinyin_converter.py  pinyin_dicts.py  utils.py
tests/: test_converter.py
