[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinyin_kana"
description = "The `chinese-pronounce-in-kana` library is designed to convert Chinese text into Japanese Katakana characters based on their pronunciation."
readme = "README.md"
license = { text = "MIT" }
version = "0.0.4"
requires-python = ">=3.7"
authors = [
  {name = "Ryan Cheng", email = "m61216051116@gmail.com"}
]
keywords = ["pinyin", "pronounce", "kana", "voice"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pypinyin>=0.42",
]

[project.urls]
"Homepage" = "https://github.com/RUI-LONG/Python-Pinyin-Kana"

[tool.ruff]
ignore = ["E501"]
[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]
